# market-viceroy-v4

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.vite/: results.json
docs/: INFRA.md  PHASE0.md  PHASE1.md  PHASE10.md  PHASE11.md  PHASE12.md  PHASE13.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  PROVENANCE.md  RUNBOOK.md  SECRETS.md
infra/clickhouse/init/: 01_bars.sql  02_equity_curves.sql  03_features.sql
infra/postgres/init/: 01_init.sql
infra/postgres/migrations/: 0001_phase1.sql  0002_phase2_gate.sql  0003_phase5_postmortem.sql  0004_phase7_graduation.sql
scripts/: Start-CommandDeck.ps1  Start-MarketViceroy.ps1  audit_fred_rates_series.py  benchmark_all.py  cluster_analysis.py  install_from_git.ps1  install_from_git.sh  regenerate_benchmarks.py  run_agents.py  run_arbitrage.py  run_gate.py  run_inventor.py  run_postmortem.py
tests/: test_cluster_analysis.py  test_readme_example.py  test_regenerate_benchmarks.py
tests/core/: test_core_models.py  test_core_portfolio_and_metrics.py
