[project]
# ---------------------------------------------------------------------------
# Market Viceroy v4 — uv workspace root.
#
# NOT pip-installable outside the workspace; it exists for local development
# with `uv sync`. The `alphakit-*` packages were ported from
# github.com/ankitjha67/alphakit @ 659c64b (see docs/PROVENANCE.md). The
# `mv-*` packages are net-new platform layers (Phase 0: typed skeletons; the
# Phase-0 data-pipe smoke lives in mv-failover).
# ---------------------------------------------------------------------------
name = "market-viceroy"
version = "0.1.0"
description = "Autonomous multi-agent trading platform (paper-first, point-in-time, governed)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Ankit Jha" }]

# Workspace members install via [tool.uv.sources] during `uv sync`.
dependencies = [
    # Ported alphakit core + research stack.
    "alphakit-core",
    "alphakit-data",
    "alphakit-bridges",
    "alphakit-strategies-trend",
    "alphakit-strategies-meanrev",
    "alphakit-strategies-carry",
    "alphakit-strategies-value",
    "alphakit-strategies-volatility",
    "alphakit-strategies-rates",
    "alphakit-strategies-commodity",
    "alphakit-strategies-options",
    "alphakit-strategies-macro",
    "alphakit-bench",
    # Net-new platform layers (Phase-0 typed skeletons + the data-pipe smoke).
    "mv-failover",
    "mv-intelligence",
    "mv-agents",
    "mv-journal",
    "mv-postmortem",
    "mv-risk",
    "mv-api",
    # Execution spine (Phase 1): NautilusTrader paper/live engine. Pinned to the
    # version validated by the Step-0 spike on Windows + Python 3.12 (Rust wheel
    # imports; paper SimulatedExchange fills with Decimal-precise money).
    "nautilus_trader==1.228.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    # Type toolchain pinned to alphakit's validated versions (lock @ 659c64b).
    # A fresh resolve pulled mypy 2.x + newer pandas-stubs, which flag
    # redundant-cast / overload churn in the faithfully-ported alphakit code.
    # Pinning reproduces the validated type-check rather than rewriting 77
    # ported files for a stubs/mypy bump (reproducibility non-negotiable).
    "mypy==1.20.1",
    "pandas-stubs==3.0.0.260204",
    "types-requests>=2.31",
    "pre-commit>=3.7",
    "httpx2",
]

[project.urls]
Repository = "https://github.com/ankitjha67/alphakit"

# No [build-system] — this root is not a distributable package.

# ---------------------------------------------------------------------------
# uv — pin transitive deps to alphakit's validated lock (@ 659c64b) so the
# ported research/backtest engine reproduces its validated behaviour. A fresh
# resolve bumped vectorbt 0.28.2 -> 1.0.0 (a major engine version). We hold the
# validated pin ("validated, not proven"); revisit deliberately, behind tests.
# ---------------------------------------------------------------------------
[tool.uv]
constraint-dependencies = [
    "vectorbt==0.28.2",
]

# ---------------------------------------------------------------------------
# uv workspace
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = [
    "packages/alphakit-core",
    "packages/alphakit-data",
    "packages/alphakit-bridges",
    "packages/alphakit-strategies-trend",
    "packages/alphakit-strategies-meanrev",
    "packages/alphakit-strategies-carry",
    "packages/alphakit-strategies-value",
    "packages/alphakit-strategies-volatility",
    "packages/alphakit-strategies-rates",
    "packages/alphakit-strategies-commodity",
    "packages/alphakit-strategies-options",
    "packages/alphakit-strategies-macro",
    "packages/alphakit-bench",
    "packages/mv-failover",
    "packages/mv-intelligence",
    "packages/mv-agents",
    "packages/mv-journal",
    "packages/mv-postmortem",
    "packages/mv-risk",
    "packages/mv-api",
]

[tool.uv.sources]
alphakit-core = { workspace = true }
alphakit-data = { workspace = true }
alphakit-bench = { workspace = true }
alphakit-bridges = { workspace = true }
alphakit-strategies-trend = { workspace = true }
alphakit-strategies-meanrev = { workspace = true }
alphakit-strategies-carry = { workspace = true }
alphakit-strategies-value = { workspace = true }
alphakit-strategies-volatility = { workspace = true }
alphakit-strategies-rates = { workspace = true }
alphakit-strategies-commodity = { workspace = true }
alphakit-strategies-options = { workspace = true }
alphakit-strategies-macro = { workspace = true }
mv-failover = { workspace = true }
mv-intelligence = { workspace = true }
mv-agents = { workspace = true }
mv-journal = { workspace = true }
mv-postmortem = { workspace = true }
mv-risk = { workspace = true }
mv-api = { workspace = true }

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
# Runtime / requires-python / mypy all target 3.12. ruff's pyupgrade target
# is kept at the ported code's validated minimum (py310) so we don't churn
# 600+ faithfully-ported alphakit files with stylistic 3.12 rewrites
# (StrEnum, `type` aliases). New code may still use 3.12 idioms.
target-version = "py310"
extend-exclude = ["notebooks", "site", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "TID", # tidy imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (common in fastapi-style code)
    # AlphaKit uses typographical characters ("×", "–", "−", "≈") in
    # docstrings/comments by design; they are not code.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N802"]
"**/__init__.py" = ["F401"]
"packages/alphakit-data/alphakit/data/options/bs.py" = ["N803", "N806"]
"packages/alphakit-data/alphakit/data/options/synthetic.py" = ["N803", "N806"]
"packages/alphakit-data/tests/test_bs.py" = ["N803", "N806"]
"packages/alphakit-data/tests/test_synthetic_options.py" = ["N803", "N806"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
# Type-check target kept at alphakit's validated floor (3.10), like ruff's
# target-version. Runtime / requires-python are 3.12; this controls which
# pandas/numpy stub overloads apply. At 3.12 the newer overloads surface
# redundant-cast/slice churn in the ported code that was validated clean at
# 3.10 — so we hold the validated config rather than rewrite ported files.
python_version = "3.10"
strict = true
warn_unused_configs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/alphakit-core",
    "packages/alphakit-data",
    "packages/alphakit-bridges",
    "packages/alphakit-strategies-trend",
    "packages/alphakit-strategies-meanrev",
    "packages/alphakit-strategies-carry",
    "packages/alphakit-strategies-value",
    "packages/alphakit-strategies-volatility",
    "packages/alphakit-strategies-rates",
    "packages/alphakit-strategies-commodity",
    "packages/alphakit-strategies-options",
    "packages/alphakit-strategies-macro",
    "packages/alphakit-bench",
    "packages/mv-failover",
    "packages/mv-intelligence",
    "packages/mv-agents",
    "packages/mv-journal",
    "packages/mv-postmortem",
    "packages/mv-risk",
    "packages/mv-api",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Untyped third-party libs — we still strict-check our own code.
[[tool.mypy.overrides]]
module = [
    "vectorbt",
    "vectorbt.*",
    "backtrader",
    "backtrader.*",
    "pandas_market_calendars",
    "pandas_market_calendars.*",
    "yfinance",
    "yfinance.*",
    "yaml",
    "yaml.*",
    "fredapi",
    "fredapi.*",
    "requests",
    "requests.*",
    "scipy",
    "scipy.*",
    "ccxt",
    "ccxt.*",
    "clickhouse_connect",
    "clickhouse_connect.*",
    "nautilus_trader",
    "nautilus_trader.*",
    "langgraph",
    "langgraph.*",
    "langchain_core",
    "langchain_core.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring fixture data or live services",
    "benchmark: benchmark regression tests",
    "network: tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["alphakit", "mv"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
fail_under = 85
show_missing = true
skip_covered = false
